<resources>
    <string name="app_name">Google India Scholarships</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_header_title">Google India Scholarships</string>
    <string name="course_title_android_dev_basic">Android Development Basic</string>
    <string name="course_title_android_dev_intermediate">Android Development Intermediate</string>
    <string name="course_title_web_dev_basic">Web Development Basic</string>
    <string name="course_title_web_dev_intermediate">Web Development Intermediate</string>
    <string name="google_india_scholarship">Google India Scholarship</string>

    <string name="NA">NA</string>


    <string-array name="array_course_titles">
        <item>@string/course_title_android_dev_basic</item>
        <item>@string/course_title_android_dev_intermediate</item>
        <item>@string/course_title_web_dev_basic</item>
        <item>@string/course_title_web_dev_intermediate</item>
    </string-array>


    <string name="login_logo">Login logo</string>
    <string name="login_app_name">Google India Scholarships 2018</string>
    <string name="login_app_tagline">-by the scholar,for the scholar</string>
    <string name="hint_email">Username/Email</string>
    <string name="hint_password">Password</string>
    <string name="forgotpassword"><u>ForgotPassword?</u></string>



    <string-array name="array_course_abb">
        <item>AB</item>
        <item>AI</item>
        <item>WB</item>
        <item>WI</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="gis_2k18_logo">GIS 2k18 LOGO</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_here">Reset here.</string>


</resources>
